--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 08:24:00 AM</p>
+    <p class="lastupdate">09/04/2020 08:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.1&#176;F</td>
+        <td class="data">60.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.1&#176;F</td>
+        <td class="data">60.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.1&#176;F</td>
+        <td class="data">60.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.5&#176;F</td>
+        <td class="data">52.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.962 inHg (0.032)</td>
+        <td class="data">29.962 inHg (0.031)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph W (270&#176;)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">71.4&#176;F</td>
+        <td class="data">71.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="08:19:38 AM">
-            52.8</span><br/>
+          <span title="08:28:30 AM">
+            52.9</span><br/>
           <span title="03:56:31 AM">
             48.6</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 17 hours, 37 minutes</td>
+      <td class="data">2 days, 17 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 17 hours, 37 minutes</td>
+      <td class="data">2 days, 17 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
